--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,11 @@ img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    margin: 0 0 1rem 1rem;
 }
-p {padding: 0;}
+p {padding: 0;
+   margin: 1rem;
+}
 main {
     max-width: 840px;
 }
@@ -29,18 +32,39 @@ aside {
     background-color: white;
     color: #333;
     text-align: center;
+    position: relative;
 }
 aside img {
     width: 200px;
     height: auto;
 }
+aside h2 {
+    position: absolute;
+    top: 15px;
+    left: 121px;
+}
 main img {
-    width: 150px;
-    height: auto;
+    /* Floating the image to the right*/
+    float: right;
 }
 footer {
     margin-top: 15px;
     border-top: 1px solid black;
     text-align: center;
 }
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Class selector */
+.box {
+    margin: 1rem;
+    border:1rem solid rgb(000/.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+.indent {
+    padding:2rem;
+}
