--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,11 +60,12 @@ footer {
 /* Class selector */
 .box {
     margin: 1rem;
-    border:1rem solid rgb(000/.1);
+    border:1rem solid rgb(0 0 0 / .1);
     padding: 1rem;
     background-color: #ddd;
     color: #000;
 }
+
 .indent {
     padding:2rem;
 }
