--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,8 @@ footer {
     box-sizing: border-box;
 }
 
-.box { /* Class selectors */
+.box { 
+    /* Class selectors */
     margin: 1rem;
     border: 1rem solid rgb(0 0 0 /.1);
     padding: 2rem;
