--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,9 +57,8 @@ footer {
     padding: 0;
     box-sizing: border-box;
 }
-
+/* "Class selectors"*/
 .box { 
-    /* Class selectors */
     margin: 1rem;
     border: 1rem solid rgb(0 0 0 /.1);
     padding: 2rem;
